--- a/style/style.css
+++ b/style/style.css
@@ -170,8 +170,7 @@ nav p{
 	font-weight: lighter;/*							épaisseur du texte*/
 }
 
-
-
+/*------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
 
 
